--- a/.github/workflows/testcicd.yaml
+++ b/.github/workflows/testcicd.yaml
@@ -26,7 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: ./backend
+          context: ./backend/
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/wanderlust-backend:test-branch
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-jenkins:test-branch
