--- a/.github/workflows/testcicd.yaml
+++ b/.github/workflows/testcicd.yaml
@@ -27,4 +27,4 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backed-jenkins:test-branch
+          tags: biploprai/backend-jenkins:test-branch
