--- a/.github/workflows/testcicd.yaml
+++ b/.github/workflows/testcicd.yaml
@@ -31,3 +31,16 @@ jobs:
           context: ./backend/
           push: true
           tags: biploprai/backend-jenkins:test-branch
+
+        Docker-compose-transfer:
+          runs-on: ubuntu-latest
+          steps:
+              -name: copy file via ssh key
+              uses: appleboy/scp-action@v0.1.7
+              with:
+                host: ${{ secrets.HOST }}
+                username: ${{ secrets.USERNAME }}
+                port: ${{ secrets.PORT }}
+                key: ${{ secrets.KEY }}
+                source: "docker-compose.yaml"
+                target: /home/aws-ec2-user/docker-compose.yaml 
