fix:test branch cicd yaml add

--- a/.github/workflows/testcicd.yaml
+++ b/.github/workflows/testcicd.yaml
@@ -42,5 +42,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: ${{ secrets.PORT }}
         key: ${{ secrets.KEY }}
-        source: "docker-compose.yaml"
+        source: "./docker-compose.yaml"
         target: /home/aws-ec2-user/docker-compose.yaml 
