--- a/.github/workflows/testcicd.yaml
+++ b/.github/workflows/testcicd.yaml
@@ -33,8 +33,18 @@ jobs:
           tags: biploprai/backend-jenkins:test-branch
 
   Docker-compose-transfer:
-    runs-on: ubuntu-latest
-    steps:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Debug - List files
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Listing files:"
+        ls -alh
+
     - name: copy file via ssh key
       uses: appleboy/scp-action@v0.1.7
       with:
@@ -42,5 +52,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: ${{ secrets.PORT }}
         key: ${{ secrets.KEY }}
-        source: "./docker-compose.yaml"
-        target: /home/aws-ec2-user/docker-compose.yaml 
+        source: "docker-compose.yaml"
+        target: "/home/aws-ec2-user/docker-compose.yaml"
